<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/newsLogo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/TODO"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/newsSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/search_border"
            android:drawableStart="@drawable/search"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/search" />

        <ImageView
            android:id="@+id/newsmore"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/TODO"
            app:srcCompat="@drawable/ic_baseline_add_24" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <ImageView
        android:id="@+id/newsMenu"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:srcCompat="@drawable/menu_more" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/newsAttention"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/attention"
                android:textColor="#000000"
                tools:text="@string/attention" />

            <TextView
                android:id="@+id/newest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/newest"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/newsMost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/most_search"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/newsHot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/hot_word"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/newsInten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/intensive"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/newsIphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/IPHONE"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/newsOriginal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/original"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/newsEvaluating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/evaluating"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/newsSreaming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/streaming"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/newsIT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/IT"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/newsFive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/five"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/newsBalcony"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/balcony"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/newsMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/mobile"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/newsNumerical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/numerical"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/newsCollege"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/college"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/newsVR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/VR"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/newsSmart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/smart"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/newsComputer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/computer"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/newsEast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/east"
                android:textColor="#000000" />

        </LinearLayout>
    </HorizontalScrollView>

    <ImageView
        android:id="@+id/newsInfoImg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="top"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/TODO"
        app:layout_constraintBottom_toTopOf="@+id/newsInfo"
        app:layout_constraintEnd_toEndOf="@+id/newsInfo"
        app:layout_constraintStart_toStartOf="@+id/newsInfo"
        app:srcCompat="@drawable/info" />

    <ImageView
        android:id="@+id/newsItspicyImg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/TODO"
        app:layout_constraintBottom_toTopOf="@+id/newsItspicy"
        app:layout_constraintEnd_toEndOf="@+id/newsItspicy"
        app:layout_constraintStart_toStartOf="@+id/newsItspicy"
        app:srcCompat="@drawable/itspicy" />

    <ImageView
        android:id="@+id/newsCircleImg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/TODO"
        app:layout_constraintBottom_toTopOf="@+id/newsCircle"
        app:layout_constraintEnd_toEndOf="@+id/newsCircle"
        app:layout_constraintStart_toStartOf="@+id/newsCircle"
        app:srcCompat="@drawable/circle" />

    <ImageView
        android:id="@+id/newsFindImg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/TODO"
        app:layout_constraintBottom_toTopOf="@+id/newsFind"
        app:layout_constraintEnd_toEndOf="@+id/newsFind"
        app:layout_constraintStart_toStartOf="@+id/newsFind"
        app:srcCompat="@drawable/find" />

    <ImageView
        android:id="@+id/newsMineImg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/TODO"
        app:layout_constraintBottom_toTopOf="@+id/newsMine"
        app:layout_constraintEnd_toEndOf="@+id/newsMine"
        app:layout_constraintStart_toStartOf="@+id/newsMine"
        app:srcCompat="@drawable/mine" />

    <TextView
        android:id="@+id/newsInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/information"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/newsItspicy"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/newsItspicy"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/product"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/newsCircle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/newsInfo" />

    <TextView
        android:id="@+id/newsCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/dumpling"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/newsFind"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/newsItspicy" />

    <TextView
        android:id="@+id/newsFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/find"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/newsMine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/newsCircle" />

    <TextView
        android:id="@+id/newsMine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/mine"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/newsFind" />

</androidx.constraintlayout.widget.ConstraintLayout>